src/objects/Upload_Files__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_Email_Address__c</fullName>
        <label>Accounting Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alert_for_Unlabeled_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alert for Unlabeled File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Upload_Files</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count_Of_AWS_S3_Objects__c</fullName>
        <label>Count Of AWS S3 Objects</label>
        <summaryForeignKey>AWS_S3_Object__c.Upload_Files__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_Time_Of_Upload__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date/Time Of Upload</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deposition_Date__c</fullName>
        <formula>Deposition__r.Deposition_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposition_Number__c</fullName>
        <label>Deposition Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deposition</label>
        <referenceTo>Deposition__c</referenceTo>
        <relationshipName>Upload_Files1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>File_s_uploaded_before_the_deposition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>File(s) uploaded before the deposition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Files_Without_Label__c</fullName>
        <label>Count of Files Without Label</label>
        <summaryFilterItems>
            <field>AWS_S3_Object__c.File_Type__c</field>
            <operation>equals</operation>
            <value>Other,&apos;&apos;</value>
        </summaryFilterItems>
        <summaryForeignKey>AWS_S3_Object__c.Upload_Files__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <label>IP Address</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoices_Are_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoices Are Uploaded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Upload_Number__c</fullName>
        <label>Latest Upload Number</label>
        <summarizedField>AWS_S3_Object__c.Upload_No__c</summarizedField>
        <summaryForeignKey>AWS_S3_Object__c.Upload_Files__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PastTime_55Min__c</fullName>
        <formula>NOW() - (55/1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PastTime 55Min</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Production_Email_Address__c</fullName>
        <label>Production Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Transcripts_Exhibits_Are_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transcripts/Exhibits Are Uploaded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Video_Email_Address__c</fullName>
        <label>Video Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Videos_Are_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Videos Are Uploaded?</label>
        <type>Checkbox</type>
    </fields>
    <label>Upload Batches</label>
    <nameField>
        <displayFormat>UB-{0000000}</displayFormat>
        <label>Upload Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Upload Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>